# routes/itemRoute.js
@@ -6,6 +6,7 @@ const upload = require('../middleware/upload');
 // Get all items
 router.get('/', ItemController.getAllItems);
 router.get('/:id', ItemController.getItemById);
+router.get('/category/:category', ItemController.getItemByCategory)
 router.post('/', ItemController.createItem);
 
 router.post('/image/:id', upload.single('image'), ItemController.uploadItemImage);
