# routes/orderRoute.js
@@ -2,8 +2,8 @@ const express = require('express')
 const router = express.Router()
 const orderController = require('../controllers/orderController')
 
-router.get('/api/orders', orderController.getOrders)
-
-router.put('/api/orders/status/:id', orderController.updateOrderStatus)
+router.get('/orders', orderController.getOrders)
+router.put('/addItem/:orderId', orderController.addItemsToOrder)
+// router.put('/api/orders/status/:id', orderController.updateOrderStatus)
 
 module.exports = router
