# routes/tableRoute.js
@@ -4,6 +4,7 @@ const tableController = require("../controllers/tableController");
 const router = express.Router();
 
 router.get('/init', tableController.initTables)
+router.get('/', tableController.getTables)
 router.get('/:tabledId', tableController.getTableInfo)
 router.put('/updateStatus/:tableId', tableController.updateTableStatus)
 router.put('/open/:tableId', tableController.openTable)
